--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,22 @@
-<p>grafica1 works!</p>
+<div class="row">
+    
+    <div class="col-6">
+        <app-dona title="Ventas"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona [labels]="labels"
+                    [data]="data1"
+                    title="compras"></app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona title="cambios"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona title="compras 2"></app-dona>
+    </div>
+</div>
