--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -10,23 +10,13 @@
   
        <div class="page-wrapper">
   
-              <!-- ============================================================== -->
-              <!-- Container fluid  -->
-              <!-- ============================================================== -->
               <div class="container-fluid">
-                  <app-breadcrumbs></app-breadcrumbs>
+                  <router-outlet></router-outlet>   
+
               </div>
-  
-  
-              <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <router-outlet></router-outlet>
-                        </div>
-                    </div>
-                </div>
-            </div>
-      
+            
+
+              <!--Mi sistema de rutas -->
           </div>
+
   </div>
